# DavisWindRainGauge

./: .gitignore  .gitmodules  CMakeLists.txt  DavisWindRainGauge.cpp  README.md  SensorGauge.cpp  i2c.c  i2c.h  low_power.c  low_power.h  rain.c  rain.h  utils.c  utils.h  wind.c  wind.h
